# Cyber-Immunizer

./: .gitignore  AGENTS.md  CLAUDE.md  PR65_COMPLETION_REPORT.md  PR65_consolidated_remaining_tasks.md  PR65_scope_proposal.md  README.md  config.backup.toml  pyproject.toml  引き戻しプロンプト
.claude/: settings.json
.cyber_immunizer/: structured_rules.json
.github/: PULL_REQUEST_TEMPLATE.md
cli/: __init__.py  report.py  structured_eval.py  structured_eval_latency.py
core/: __init__.py  active_detector.py  detector.py  fitness.py  policy.py  runtime_selector.py  structured_detector.py  structured_evaluator.py  structured_validator.py  test_attacker.py  types.py
data/: active_structured_rules.json  active_threats.json  api_usage_ledger.json  attack_requests.json  benign_requests.json  circuit_breaker.json  counterfactual_requests.json  drift_requests.json  evolution_history.json  genome.json  holdout_requests.json  project_state.json  regression_cases.json
docs/: ADAPTIVE_SECURITY_GAME_MODEL.md  AI_ENTRYPOINT.md  AI_workflow  API_ACTIVATION_CHECKLIST.md  API_ACTIVATION_RUNBOOK.md  AST_POLICY_WHITELIST_ROADMAP.md  AUDIT_CHARTER.md  AUTONOMOUS_IMMUNE_LOOP_ARCHITECTURE.md  CIRCUIT_BREAKER_RUNBOOK.md  CI_TRIGGER_PR18.md  COMPLETION_TASKLIST.md  DEFINITION_OF_DONE.md  DOCKER_IMAGE_DIGEST_UPDATE.md  EVOLUTION_HISTORY_AUDIT.md  GPT_AUDIT_GATE_PULLBACK_PROMPT.md  MISSION_ROADMAP.md  OFFLINE_SAMPLE_PROMOTE_SEPARATION.md  OWNER_RUNBOOK.md  PHASE_1_BASELINE.md  PHASE_2_5_CLOSEOUT_AUDIT.md  PHASE_2_COMPLETION_CHECKPOINT.md  PHASE_2_PLAN.md  PHASE_3_GO_NO_GO_CHECKLIST.md  (+9 more)
(+292 files in other folders)
