[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-immunizer"
version = "0.1.0"
description = "Autonomous defensive-code evolution engine — local-first MVP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]
gemini = ["google-genai>=1.0.0", "pydantic>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "intelligence*", "scripts*", "cli*"]
